Add GitHub repo link to index.html

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <body>
         <header>
             <p>
-                This is a mandala page for wheelnav.js library. 
+                These are mandala <a href="https://github.com/softwaretailoring/wheelnav.mandala" target="_blank" title="GitHub">paths</a> for wheelnav.js library. 
                 For more information please visit the <a href="http://wheelnavjs.softwaretailoring.net" target="_blank">project page</a>
             </p>
         </header>
