Redesign, switch to wheelnav.js v1.5.0

--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
                 For more information please visit the <a href="http://wheelnavjs.softwaretailoring.net" target="_blank">project page</a>
             </p>
         </header>
-        <div style="text-align: center;">
-            <input type="button" onclick="setYinYangMandala();" class="mandalaButton" value="YinYang"/>
-            <input type="button" onclick="setFlowerMandala();" class="mandalaButton" value="Flower"/>
-            <input type="button" onclick="setHexaFlowerMandala();" class="mandalaButton" value="Flower 2"/>
-            <input type="button" onclick="setCoordMandala();" class="mandalaButton" value="Coord"/>
-            <input type="button" onclick="setSpiralMandala();" class="mandalaButton" value="Spiral"/>
-            <input type="button" onclick="setHexaMandala();" class="mandalaButton" value="Hexa"/>
-            <input type="button" onclick="setHexaCircleMandala();" class="mandalaButton" value="Hexa 2"/>
-            <input type="button" onclick="setHexaTriangleMandala();" class="mandalaButton" value="Hexa 3"/>
+        <div class="mandalaButtons">
+            <a href="#" onclick="setYinYangMandala();">YinYang</a>
+            <a href="#" onclick="setFlowerMandala();">Flower</a>
+            <a href="#" onclick="setHexaFlowerMandala();">Flower 2</a>
+            <a href="#" onclick="setCoordMandala();">Coord</a>
+            <a href="#" onclick="setSpiralMandala();">Spiral</a>
+            <a href="#" onclick="setHexaMandala();">Hexa</a>
+            <a href="#" onclick="setHexaCircleMandala();">Hexa 2</a>
+            <a href="#" onclick="setHexaTriangleMandala();">Hexa 3</a>
         </div>
         <div style="height:20px;" ></div>
         <div id="mandalaWheelDiv" class="wheelNavBig"></div>
@@ -238,7 +238,7 @@
         <div style="text-align: center;" ><input id="buttonAnimate" type="button" onclick="selectAllMandala();" class="mandalaButton" value="Animate"/></div>
         <div style="height:100px;" ></div>
         <footer>
-            <label class="tradename">&copy; 2015 <a href="http://softwaretailoring.net" target="_blank">softwaretailoring.net</a></label>
+            <label>&copy; 2015 <a href="http://softwaretailoring.net" target="_blank">softwaretailoring.net</a></label>
         </footer>
     </body>
 </html>
